Update billing, payments, and customer auth flows